--- a/backend/backend_app/Gemfile
+++ b/backend/backend_app/Gemfile
@@ -2,15 +2,20 @@ source "https://rubygems.org"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 8.0.2"
+
 # Use sqlite3 as the database for Active Record
 gem "sqlite3", ">= 2.1"
+
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 gem "jbuilder"
 
-# Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+# ✅ 追加：ユーザー認証用
+gem "devise"           # 認証ライブラリ
+gem "devise-jwt"       # JWT連携でトークン認証
+gem "bcrypt", "~> 3.1.7" # パスワードのハッシュ化用（Deviseの依存）
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
